<resources>
    <string name="app_name">Helper</string>
    <string name="title_activity_user">ActivityUser</string>
    <string name="title_activity_guide">ActivityGuide</string>
    <string name="skip">跳过</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">ActivityLogin</string>
    <string name="input_password">请输入密码</string>
    <string name="input_username">请输入用户名</string>
    <string name="register">立即注册</string>
    <string name="login">登 录</string>
    <string name="hint">提示</string>
    <string name="hint_illega_username">请输入合法的用户名，可以包含“a-z A-Z 0-9”</string>
    <string name="login_fail">登录失败，请稍后再试！</string>
    <string name="register_success">注册成功</string>
    <string name="alnum">[a-z A-Z 0-9]+</string>
    <string name="get_location_every_time">获取本机定位信息</string>
    <string name="location_height">高度：</string>
    <string name="location_latitude">纬度：</string>
    <string name="location_longitude">经度：</string>
    <string name="location_speed">速度：</string>
    <string name="hint_no_flushlight">该设备没有闪光灯！</string>
    <string name="hint_no_gps">该设备没有GPS！</string>
    <string name="hint_input_family_name">请输入家人的用户名</string>
    <string name="get_family_location">查询定位信息</string>
    <string name="not_is_family">该用户不属于你的家人</string>
    <string name="out_login">退出登录</string>
    <string name="auto_login">自动登录:</string>
    <string name="update_time_1">1分钟</string>
    <string name="update_time_10">10分钟</string>
    <string name="update_time_5">5分钟</string>
    <string name="create_relation">创建关系</string>
    <string name="create_relation_fail">创建关系失败</string>
    <string name="create_relation_success">创建关系成功</string>
    <string name="delete_relation">删除关系</string>
    <string name="delete_relation_fail">删除关系失败</string>
    <string name="delete_relation_success">删除关系成功</string>
    <string name="delete_note_fail">删除失败</string>
    <string name="delete_note_success">删除成功</string>
    <string name="can_not_null">不能为空</string>
    <string name="cancal">取消</string>
    <string name="sure">确定</string>
    <string name="hint_input_title">请输入标题</string>
    <string name="hint_save">是否保存</string>
    <string name="hint_delete">是否删除！</string>
</resources>
