<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xin.shengnan.helper.fragment.FragmentUser">

    <LinearLayout
        android:id="@+id/icn_tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/tool1"
            android:background="@drawable/iv_user_icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icn_tool"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <Switch
            android:id="@+id/switch_auto_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/auto_login" />

        <Switch
            android:id="@+id/switch_up_gps"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="自动上传定位"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <RadioGroup
                android:id="@+id/rg_update_delay_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_time_1" />

                <RadioButton
                    android:id="@+id/rb_five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_time_5"/>


                <RadioButton
                    android:id="@+id/rb_ten"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_time_10" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_create_family_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/hint_input_family_name" />

            <Button
                android:id="@+id/btn_create_relation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_login"
                android:text="@string/create_relation"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_delete_family_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/hint_input_family_name"/>

            <Button
                android:id="@+id/btn_delete_relation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_login"
                android:text="@string/delete_relation"/>

        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btn_out_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_out_login"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="@string/out_login"/>

</RelativeLayout>
