<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xin.shengnan.helper.fragment.FragmentGPS">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/gps_back"
        android:scaleType="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#80808080"
                android:textColor="#FF000000"
                android:textSize="16sp"
                android:text="@string/location_longitude"/>

            <TextView
                android:id="@+id/tv_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_longitude"
                android:textSize="16sp"
                android:background="#80808080"
                android:textColor="#FF000000"
                android:text="@string/location_latitude"/>

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_latitude"
                android:textSize="16sp"
                android:background="#80808080"
                android:textColor="#FF000000"
                android:text="@string/location_height"/>

            <TextView
                android:id="@+id/tv_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_height"
                android:textSize="16sp"
                android:background="#80808080"
                android:textColor="#FF000000"
                android:text="@string/location_speed"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_speed"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <Button
                        android:id="@+id/btn_every_time_flush_gps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_welcome_skip"
                        android:text="@string/get_location_every_time"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_gps_family_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_input_family_name"
                android:layout_below="@+id/tv_family_latitude"/>



            <TextView
                android:id="@+id/tv_family_longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#80808080"
                android:textColor="#FF000000"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:text="@string/location_longitude"/>

            <TextView
                android:id="@+id/tv_family_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_family_longitude"
                android:textSize="16sp"
                android:background="#80808080"
                android:textColor="#FF000000"
                android:text="@string/location_latitude"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_gps_family_name"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <Button
                        android:id="@+id/btn_get_family_gps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_welcome_skip"
                        android:text="@string/get_family_location"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>

        </RelativeLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"></FrameLayout>


    </LinearLayout>

</FrameLayout>
